# fastmcp-pvl-core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/plans/: auth-subject-authz.md
docs/specs/: auth-subject-authz.md  authorization-submodule.md  file-exchange.md
src/fastmcp_pvl_core/: __init__.py  _artifacts.py  _auth.py  _cli.py  _config.py  _debug.py  _env.py  _errors.py  _factory.py  _file_exchange.py  _file_exchange_protocol.py  _file_exchange_runtime.py  _icons.py  _logging.py  _middleware.py  _server_info.py  _subject.py  file_exchange.py
tests/: conftest.py  test_artifacts.py  test_artifacts_ext.py  test_auth_bearer_tokens_file.py  test_auth_builders.py  test_auth_mode.py  test_build_auth.py  test_cli.py  test_config.py  test_debug.py  test_env.py  test_factory.py  test_file_exchange.py  test_file_exchange_coverage.py  test_file_exchange_facade.py  test_file_exchange_protocol.py  test_file_exchange_runtime.py  test_icons.py  test_logging.py  test_middleware.py  test_server_info.py  test_smoke.py  test_subject.py
