[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmcp-pvl-core"
version = "2.0.0-rc.1"  # PSR-managed post-release
description = "Shared FastMCP infrastructure: auth, middleware, logging, server-factory helpers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Peter van Liesdonk", email = "peter@liesdonk.nl"}]
requires-python = ">=3.10"
dependencies = [
  "fastmcp>=3.2.4,<4",
  # httpx is required by the consumer-side `fetch_file` tool added in
  # 1.2.0 (file-exchange feature). Previously optional under the
  # `remote-auth` extra; the extra is retained for backwards compat
  # but now resolves to a no-op since httpx is always installed.
  "httpx>=0.27",
  # tomli is the 3.10 backport of stdlib tomllib (3.11+); the bearer
  # tokens-file loader uses it transparently via a sys.version_info
  # gate. Drop this dep once ``requires-python`` is bumped to >=3.11.
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
remote-auth = []
# Optional remote-debugger support — enables ``maybe_start_debugpy()`` to
# bind a listener on ``DEBUG_PORT``. Containerised consumers add this
# extra to images that need attach-from-IDE debugging.
debug = ["debugpy>=1.8"]

[project.urls]
Homepage = "https://github.com/pvliesdonk/fastmcp-pvl-core"
Issues = "https://github.com/pvliesdonk/fastmcp-pvl-core/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.11",
  "diff-cover>=9",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastmcp_pvl_core"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
include = ["src", "tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/fastmcp_pvl_core/__init__.py:__version__"]
commit_parser = "angular"
tag_format = "v{version}"
# PSR's build_command runs inside its Docker container (python:3.14-slim)
# which has no uv. The real wheel/sdist build happens in the workflow's
# `uv build` step after PSR commits the version bump. Set to an empty
# no-op so PSR skips its internal build phase.
build_command = ""
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
